--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,7 +1,7 @@
 <h2 class="home__heading">Your Room</h2>
-<section class="home__info-card">
+<div class="home__wrapper">
+  <section class="home__info-card">
   <h2 class="home__info-main-heading">Welcome <%= locals.user.firstname%></h2>
-  <a class="logout-tag" href="/logout">Logout</a>
   <h3 class="home__user-data-heading">Your information</h3>
     <div class="home__information-wrapper">
       <p class="home__label">Username:</p>
@@ -51,7 +51,8 @@
   </p>
 </section>
 
-<h3 class="message__heading faded">Latest Message</h3>
+<div class="home__latest-message-wrapper">
+  <h3 class="message__heading faded">Latest Message</h3>
 <% if (locals.latestMessage){ %>
 <section class="post-card faded">
   <h4 class="post-card__title"><%= locals.latestMessage.title %></h4>
@@ -76,7 +77,36 @@
   </div>
 </section>
 <% } else { %>
-  <section class="post-card faded">
-    <p class="message-error">Sorry. Couldn't fetch the latest message. Try again later...</p>
-  </section>
+<section class="post-card faded">
+  <p class="message-error">Sorry. Couldn't fetch the latest message. Try again later...</p>
+</section>
 <% } %>
+
+
+<% if (locals.user) { %>
+
+  <h3 class="message__heading faded">Your Last Message</h3>
+  <% if (locals.yourLatestMessage){ %>
+  <section class="post-card faded">
+    <h4 class="post-card__title"><%= locals.yourLatestMessage.title %></h4>
+    <p class="post-card__text"><%= locals.yourLatestMessage.text %></p>
+    <hr class="post-card__hr">
+    <div class="post-card__details-wrapper">
+      <p class="post-card__posted">
+        <strong>Posted:</strong> <%= locals.yourLatestMessage.created_at %>
+      </p>
+      <p class="post-card__by">
+        <strong>By:</strong> <%= locals.yourLatestMessage.username %>
+      </p>
+    </div>
+  </section>
+  <% } else { %>
+    <section class="post-card faded">
+      <p class="message-error">Sorry. Couldn't fetch your latest message. Try again later or post a message if you haven't...</p>
+    </section>
+  <% } %>
+  <% } %>
+
+</div>
+
+</div>
