--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,7 +1,7 @@
 <footer>
   <div class="wrapper">
     <div class="footer-content">
-      <a class="github" href="#">
+      <a class="github" href="https://github.com/biandresen/House-of-Messages">
         <img src="/icons/github.svg" alt="" />
       </a>
       <p class="copyright">&copy; Birger Andresen</p>
