--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,66 +1,68 @@
 <h2 class="login__heading">Login</h2>
-<section class="login__form-card">
-  <form class="login__form" action="/login" method="POST">
-    <div class="login__input-wrapper">
-      <label class="login__label" for="email">Email</label>
-      <input
-        class="login__input"
-        type="email"
-        name="email"
-        value="<%= locals.oldInput?.email || '' %>"
-        placeholder="your email..."
-        required
-      />
+<div class="login__wrapper">
+  <section class="login__form-card">
+    <form class="login__form" action="/login" method="POST">
+      <div class="login__input-wrapper">
+        <label class="login__label" for="email">Email</label>
+        <input
+          class="login__input"
+          type="email"
+          name="email"
+          value="<%= locals.oldInput?.email || '' %>"
+          placeholder="your email..."
+          required
+        />
+      </div>
+      <div class="login__input-wrapper">
+        <label class="login__label for="password">Password</label>
+        <input
+          class="login__input"
+          type="password"
+          name="password"
+          placeholder="your password..."
+          required
+        />
+      </div>
+      <div class="login__submit-btn-wrapper">
+        <button class="login__submit-btn btn-filled" type="submit">Login</button>
+        <% if (locals.errors) { %>
+        <div class="login__error-message">
+          <% if (locals.errors.length > 0) { %>
+            <ul>
+              <% locals.errors.forEach(error => { %>
+                <li><%= error.msg %></li>
+              <% }) %>
+            </ul>
+          <% } %>
+        </>
+      </div>
+      <% } %>
+      <p class="login__toggle-login">
+        Don't have an account?
+        <a class="login__login-link" href="/register">Register</a>
+      </p>
+    </form>
+    <hr class="login__form-card-hr">
+    <div class="login__requirements-wrapper">
+      <p class="login__requirements-info">
+        NB! Both fields required for successful login
+      </p>
     </div>
-    <div class="login__input-wrapper">
-      <label class="login__label for="password">Password</label>
-      <input
-        class="login__input"
-        type="password"
-        name="password"
-        placeholder="your password..."
-        required
-      />
-    </div>
-    <div class="login__submit-btn-wrapper">
-      <button class="login__submit-btn btn-filled" type="submit">Login</button>
-      <% if (locals.errors) { %>
-      <div class="login__error-message">
-        <% if (locals.errors.length > 0) { %>
-          <ul>
-            <% locals.errors.forEach(error => { %>
-              <li><%= error.msg %></li>
-            <% }) %>
-          </ul>
-        <% } %>
-      </>
-    </div>
-    <% } %>
-    <p class="login__toggle-login">
-      Don't have an account?
-      <a class="login__login-link" href="/register">Register</a>
-    </p>
-  </form>
-  <hr class="login__form-card-hr">
-  <div class="login__requirements-wrapper">
-    <p class="login__requirements-info">
-      NB! Both fields are required for successful login
-    </p>
-  </div>
-</section>
+  </section>
 
-<section class="login__info-card">
-  <h2 class="login__info-main-heading">Information</h2>
-  <h3 class="login__info-heading">How to login</h3>
-  <p class="login__info-text">
-    In order to login you must provide your email and password.
-  </p>
-  <h3 class="login__info-heading">What to expect</h3>
-  <p class="login__info-text">
-    When you are successfully logged in you will be directed to your home page where you can see information about your user and become a house member - if you have the secret password... You are also able to go to the messages area to view messages!
-  </p>
-  <h3 class="login__info-heading">Becoming a house member</h3>
-  <p class="login__info-text">
-    Becoming a house member requires you to insert a secret password into the ‘Become a member’ field on your ‘home’ page. The idea is that you stick around and get noticed until a house member deem you worthy as a member and gives you the secret password...
-  </p>
-</section>
+  <section class="login__info-card">
+    <h2 class="login__info-main-heading">Information</h2>
+    <h3 class="login__info-heading">How to login</h3>
+    <p class="login__info-text">
+      In order to login you must provide your email and password.
+    </p>
+    <h3 class="login__info-heading">What to expect</h3>
+    <p class="login__info-text">
+      When you are successfully logged in you will be directed to your home page where you can see information about your user and become a house member - if you have the secret password... You are also able to go to the messages area to view messages!
+    </p>
+    <h3 class="login__info-heading">Becoming a house member</h3>
+    <p class="login__info-text">
+      Becoming a house member requires you to insert a secret password into the ‘Become a member’ field on your ‘home’ page. The idea is that you stick around and get noticed until a house member deem you worthy as a member and gives you the secret password...
+    </p>
+  </section>
+</div>
