--- a/views/messages.ejs
+++ b/views/messages.ejs
@@ -76,7 +76,7 @@
 </div>
 
 
-
+<script src="/scripts/postCard.js"></script>
 <script>
   const navToggler = document.querySelector(".messages__toggle-messages-nav");
   const messagesNav = document.querySelector(".messages__nav");
