--- a/views/home.ejs
+++ b/views/home.ejs
@@ -40,9 +40,7 @@
         </a>
     </div>
     <% if (!locals.user.is_member) { %>
-    <button class="home__join-btn btn-outlined">
-      <a href="/join">Join the Club</a>
-    </button>
+      <a href="/join"><button class="home__join-btn btn-outlined">Join the Club</button></a>
     <% } %>
   </div>
   <h3 class="home__info-heading">Becoming a house member</h3>
