fix(CSS/messages-page): fix error message when no messages exist
Closes #37

--- a/views/messages.ejs
+++ b/views/messages.ejs
@@ -30,8 +30,9 @@
       <% } %>
     </ol>
   </div>
+
 <div class="messages__post-card-wrapper">
-  <% if (locals.allMessages) {
+  <% if (locals.allMessages && locals.allMessages.length > 0) {
     locals.allMessages.forEach(message => { %>
       <section class="post-card" id="message-<%= message.id %>">
 
