feat(HTML): add form requirements
Closes #5

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -10,6 +10,8 @@
           name="email"
           value="<%= locals.oldInput?.email || '' %>"
           placeholder="your email..."
+          minlength="5"
+          maxlength="32"
           required
         />
       </div>
