feat(CSS): add better UX and UI

--- a/views/join.ejs
+++ b/views/join.ejs
@@ -14,3 +14,5 @@
     <p class="join-card__info">Insert the secret member password to join</p>
   </div>
 </section>
+
+<script src="/scripts/autoScrollMobile.js"></script>
