--- a/views/login.ejs
+++ b/views/login.ejs
@@ -71,3 +71,9 @@
     </p>
   </section>
 </div>
+
+<script src="/scripts/autoScrollMobile.js"></script>
+<script>
+  const loginInput = document.querySelector(".login__input")
+  loginInput.focus();
+</script>
