--- a/views/register.ejs
+++ b/views/register.ejs
@@ -114,6 +114,7 @@
   </section>
 </div>
 
+<script src="/scripts/autoScrollMobile.js"></script>
 <script>
   const registerInput = document.querySelector(".register__input")
   registerInput.focus()
