--- a/views/join.ejs
+++ b/views/join.ejs
@@ -16,3 +16,7 @@
 </section>
 
 <script src="/scripts/autoScrollMobile.js"></script>
+<script>
+  const joinInput = document.querySelector(".join-card__input");
+  joinInput.focus();
+</script>
